--- a/Fragments/src/components/scss/registration.scss
+++ b/Fragments/src/components/scss/registration.scss
@@ -42,23 +42,23 @@
     height: 140px;
     opacity: 1;
 }
-.insert-photo{
-    display: inline-block;
-    width: 100px;
-    height: 140px;
-    opacity: 0;
-    cursor: pointer;
-}
 .input-photo{
     display: inline-block;
     box-sizing: border-box;
-    margin: 15px 60px;
-    width: 100px;
-    height: 140px;
+    margin: 15px 60px 0px 60px;
+    width: 150px;
+    height: 190px;
     border: 2px dashed rgba($color: #000000, $alpha: .5);
     -webkit-background-clip: padding-box; /* for Safari */
     background-clip: padding-box;
 }
+.input-file{
+    display: inline-block;
+    box-sizing: border-box;
+    margin: 0 60px 15px 60px;
+    width: 325px;
+}
+
 .input-fields{
     display: inline-block;
     box-sizing: border-box;
@@ -77,4 +77,10 @@
     line-height: 24px;
     letter-spacing: 0.3px;
     border: 2px solid #000000
-    !important} 
+    !important
+} 
+.invalid-field{
+    border-color: #dc3545;
+    color: #dc3545;
+    background-color: #fff;
+}
