--- a/Fragments/src/components/scss/registration.scss
+++ b/Fragments/src/components/scss/registration.scss
@@ -1,86 +1,50 @@
-.reg-form{
-    box-sizing: border-box;
-    margin: 150px 30%;
-    padding: 55px;
-    font-family: 'Mulish';
-    font-style: normal;
-    font-weight: 600;
+
+.logbutton{
+    font-family: 'Mulish', sans-serif;
     font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0.3px;
-    border: 2px solid;
-    border-image: linear-gradient(180deg, #4F33FD 33.06%, #FCA119 100%) 1;
-    .reg-btn{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 14px 20px;
-        width: 171px;
-        height: 52px;
-        color: white;
-        box-sizing: border-box;
-        margin: 54px 60px 0;
-        background: #000000;
-        border-radius: 999px;
-
-    }
+    width: 505px;
+    height: 50px;
+    border-radius: 999px;
+}
+.moduleborderwrap{
+    padding: 1rem;
+    height: 588px;
+    width: 593px;
+    background:linear-gradient(180deg, #4F33FD 33.06%, #FCA119 100%);
+    padding: 2px;
+}
+.control-group{
+    margin-top: 20px;
 }
 
-.reg-info{
-    display: inline-block;
-    margin: 30px 60px;
-    width: 325px;
-    height: 20px;
-    background: #000000;
-    color: white;
+.line{
+    height: 2px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
-.img-insert{
-    display: inline-block;
-    position:fixed;
-    width: 100px;
-    height: 140px;
-    opacity: 1;
+.controls{
+    margin-top: 10px;
 }
-.input-photo{
-    display: inline-block;
-    box-sizing: border-box;
-    margin: 15px 60px 0px 60px;
-    width: 150px;
-    height: 190px;
-    border: 2px dashed rgba($color: #000000, $alpha: .5);
-    -webkit-background-clip: padding-box; /* for Safari */
-    background-clip: padding-box;
-}
-.input-file{
-    display: inline-block;
-    box-sizing: border-box;
-    margin: 0 60px 15px 60px;
-    width: 325px;
-}
-
-.input-fields{
-    display: inline-block;
-    box-sizing: border-box;
-    margin: 15px 60px;
-    width: 325px;
-    height: 40px;
-
-    border: 2px solid #000000;
-}
-
-.react-datepicker {
-    font-family: 'Mulish' !important;
-    font-style: normal !important;
-    font-weight: 600 !important;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0.3px;
-    border: 2px solid #000000
-    !important
-} 
-.invalid-field{
-    border-color: #dc3545;
-    color: #dc3545;
+.registration-form{ 
     background-color: #fff;
+    padding: 44px;
+    height: 584px;
+}
+.hints{
+    margin-top: 12px;
+    font-family: 'Mulish', sans-serif;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    padding: 102px;
+    width: 588px;
+     margin:0px auto;
+}
+
+legend{
+    height: 36px;
+    width: 505px;
+    font-size: 28px;
+    font-family:'Montserrat Alternates', sans-serif;
 }
