--- a/Fragments/src/components/UI/registrationDetails/Registration.module.scss
+++ b/Fragments/src/components/UI/registrationDetails/Registration.module.scss
@@ -1,20 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-.regInfo{
-    display: inline-block;
-    font-family: 'Montserrat Alternates';
-    font-style: normal;
-    width: 505px;
-    height: 36px;
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 36px;
-    flex: none;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 1;
-}
 .inputFields{
     display: inline-block;
     box-sizing: border-box;
@@ -24,17 +7,16 @@
     padding-bottom: 8px;
     border-width: 0 0 2px;
     border-color: black;
-    font-family: 'Mulish';
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
-    margin: 8px -26px 50px 0px;
+    margin: 10px -26px 50px 0px;
     
     
 }
 input[name="email"]{
-    margin: 0 0 0 0 ;
+    margin-bottom: 0;
+    padding-bottom: 8px;
 }
 .inputFields:focus{
     outline: none;
@@ -70,7 +52,6 @@ input[name="email"]{
 button.regBtn{
     display: inline-block;
     padding: 14px 20px;
-
     width: 123px;
     height: 52px;
     color: white;
@@ -82,6 +63,7 @@ button.regBtn{
 button.regBtn:disabled{
     background: #C1C1C5;
     border: none;
+    color: white;
 }
 button.backBtn{
     display: inline-block;
@@ -100,9 +82,7 @@ button.backBtn{
     box-sizing: border-box;
     width: 505px;
     height: 18px;
-    font-family: 'Mulish';
-    font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 14px;
     line-height: 18px;
     letter-spacing: 0.2px;
