--- a/Fragments/src/components/UI/checkbox/Checkbox.module.css
+++ b/Fragments/src/components/UI/checkbox/Checkbox.module.css
@@ -9,7 +9,7 @@
     font-family: 'Mulish';
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-between;
+    justify-content:space-around;
     padding-right: 56px;
     font-size: 1.125rem;
     box-sizing: border-box;
