--- a/Fragments/src/components/UI/checkbox/Checkbox.module.css
+++ b/Fragments/src/components/UI/checkbox/Checkbox.module.css
@@ -6,7 +6,7 @@
 }
 
 .postCheckboxRepresentative{
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     display: flex;
     flex-wrap: wrap;
     justify-content:space-around;
