--- a/Fragments/src/components/header/Header.module.scss
+++ b/Fragments/src/components/header/Header.module.scss
@@ -9,7 +9,7 @@
 .fragmentsText{
     position: relative;
     margin-left: 10px;
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 18px;
@@ -26,7 +26,7 @@
     position: relative;
     width: 48px;
     height: 24px;
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 18px;
@@ -65,7 +65,7 @@
     padding: 8px 10px;
     border: 2px solid #000000;
     border-radius: 999px;
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -85,7 +85,7 @@
     color: white;
     background-color: black;
     border-radius: 999px;
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
