#031 Completed design and fixed bugs

--- a/Fragments/src/components/UI/channeldetails/Channeldetails.module.css
+++ b/Fragments/src/components/UI/channeldetails/Channeldetails.module.css
@@ -19,6 +19,10 @@
 .channelAndChannel{
     margin-right: 16px;
 }
+.detailsAndInputAndDelete{
+    max-width: 560px;
+    width: 100%;
+}
 .channelOfConntection{
     display: inline-block;
     box-sizing: border-box;
