--- a/Fragments/src/components/UI/checkbox/Checkbox.module.css
+++ b/Fragments/src/components/UI/checkbox/Checkbox.module.css
@@ -9,7 +9,6 @@
     font-family: 'Mulish', sans-serif;
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-around;
     padding-right: 56px;
     font-size: 1.125rem;
     box-sizing: border-box;
@@ -18,6 +17,7 @@
 .postCheckboxRepresentative p{
     display: inline-block;
     padding-left: 15px;
+    padding-right: 24px;
 }
 .roleCheckboxPos{
     padding-top: 58px;
