--- a/Fragments/src/components/scss/signup.scss
+++ b/Fragments/src/components/scss/signup.scss
@@ -1,10 +1,28 @@
 
 .logbutton{
-    font-family: 'Mulish', sans-serif;
+    background-color: #fff;
+    color: #000000;
     font-size: 18px;
+    align-items: center;
+    line-height: 24px;
+    font-weight: 600;
+    justify-content: center;
     width: 505px;
     height: 50px;
+    border-width: 2px;
     border-radius: 999px;
+}
+.logbutton:hover{
+    background-color:rgb(24, 24, 24);
+    color: #fff;
+    transition-duration: 0.3s;
+}
+.logbutton:hover .svg1{
+    filter: invert(100%) !important;
+    transition-duration: 0.3s;
+}
+.svg1{
+    filter: invert(0%);
 }
 .moduleborderwrap{
     padding: 1rem;
@@ -26,13 +44,16 @@
     margin-top: 10px;
 }
 .registration-form{ 
+    font-family: 'Mulish', sans-serif;
     background-color: #fff;
+    color:#000000;
+    font-weight: 500;
     padding: 44px;
     height: 584px;
 }
 .hints{
     margin-top: 12px;
-    font-family: 'Mulish', sans-serif;
+    
 }
 .container{
     display: flex;
