#052-Create user profile page #58
Fixed styles
Added new page (left side)

--- a/Fragments/src/components/UI/benefits&interests/benefits/Benefits.module.css
+++ b/Fragments/src/components/UI/benefits&interests/benefits/Benefits.module.css
@@ -6,6 +6,10 @@
     margin-bottom: 12px;
 }
 
+.benefitsText{
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+
 .hintButton p{
     border-radius: 50%;
     font-size: 11px;
@@ -23,16 +27,17 @@
     top: 4px;
     left: 0;
     cursor: default;
+    font-family: 'Mulish', sans-serif;
 }
 
 .charAmount{
-    /* max-width: 502px; */
     font-size: small;
     width: 100%;
     display:flex;
     justify-content: flex-end;
     align-items: center;
     color: #909095;
+    font-family: 'Mulish', sans-serif;
 }
 
 .multiInput{
@@ -45,4 +50,5 @@
     margin-bottom: 15px;
     outline: none;
     resize: none;
+    font-family: 'Mulish', sans-serif;
 }
