--- a/Fragments/src/components/UI/checkbox/Checkbox.module.css
+++ b/Fragments/src/components/UI/checkbox/Checkbox.module.css
@@ -3,6 +3,7 @@
     font-size: 1.3rem;
     font-weight: 500;
     line-height: 2rem;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .postCheckboxRepresentative{
