--- a/Fragments/src/components/header/Header.module.scss
+++ b/Fragments/src/components/header/Header.module.scss
@@ -17,8 +17,8 @@
     color: #000000;
 }
 .fragmentsLogo{
-    position: relative;
-    margin: 32px 5% 32px 112px;
+    position: relative;//32px 5% 32px 112px
+    margin: 32px 2% 32px 32px;
     cursor: pointer;
 }
   
