--- a/Fragments/src/components/UI/registrationDetails/Registration.module.scss
+++ b/Fragments/src/components/UI/registrationDetails/Registration.module.scss
@@ -11,8 +11,7 @@
     font-size: 18px;
     line-height: 24px;
     margin: 10px -26px 50px 0px;
-    
-    
+    font-family: 'Mulish', sans-serif;
 }
 input[name="email"]{
     margin-bottom: 0;
@@ -87,6 +86,7 @@ button.backBtn{
     line-height: 18px;
     letter-spacing: 0.2px;
     color: #909095;
+    font-family: 'Mulish', sans-serif;
 }
 .required{
     color: red;
@@ -112,6 +112,7 @@ button.backBtn{
     font-size: 18px;
     line-height: 24px;
     margin: 8px 0 50px 0;
+    font-family: 'Mulish', sans-serif;
 }
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     select {
