fixed font-family sonar

--- a/Fragments/src/components/profile page/profile/Profile.module.scss
+++ b/Fragments/src/components/profile page/profile/Profile.module.scss
@@ -43,7 +43,7 @@ border-radius: 999px;
 .backButtonText{
   width: 173px;
 height: 20px;
-font-family: 'Mulish';
+font-family: 'Mulish', sans-serif;;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
