--- a/Fragments/src/components/profile page/down border infortmation/DownBorder.module.scss
+++ b/Fragments/src/components/profile page/down border infortmation/DownBorder.module.scss
@@ -7,7 +7,7 @@
   }
   
   .bigText {
-    font-family: "Montserrat Alternates";
+    font-family: "Montserrat Alternates", sans-serif;;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -27,7 +27,7 @@
   }
 
   .text{
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
