Fixed bugs sonar

--- a/Fragments/src/components/profile page/left side information/LeftSide.module.scss
+++ b/Fragments/src/components/profile page/left side information/LeftSide.module.scss
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     align-self: center;
-    font-family: "Montserrat Alternates", sans-serif;;
+    font-family: "Montserrat Alternates", sans-serif;
     font-weight: 500;
     font-size: 20px;
     line-height: 32px;
@@ -25,7 +25,7 @@
   .dateOfBirth {
     margin-top: 8px;
     display: flex;
-    font-family: "Mulish", sans-serif;;
+    font-family: "Mulish", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -41,7 +41,7 @@
     margin-top: 8px;
     margin-bottom: 22px;
     display: block;
-    font-family: "Mulish", sans-serif;;
+    font-family: "Mulish", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -61,7 +61,7 @@
     margin-right: 8px;
     margin-bottom: 0px;
     height: 20px;
-    font-family: 'Mulish', sans-serif;;
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -124,7 +124,7 @@
   
   .settingsExit{
     padding-top: 20px;
-    font-family: 'Mulish', sans-serif;;
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
