--- a/Fragments/src/components/profile page/profile/Profile.module.scss
+++ b/Fragments/src/components/profile page/profile/Profile.module.scss
@@ -21,7 +21,7 @@
 }
 
 .centerInfo{
-  max-width: (1439px-320px);
+  max-width: (1439px);
   width: 100%;
   margin-left: 3.25rem;
 }
@@ -43,7 +43,7 @@ border-radius: 999px;
 .backButtonText{
   width: 173px;
 height: 20px;
-font-family: 'Mulish', sans-serif;;
+font-family: 'Mulish', sans-serif;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
