--- a/Fragments/src/components/profile page/upper border information/UpperBorderInformation.module.scss
+++ b/Fragments/src/components/profile page/upper border information/UpperBorderInformation.module.scss
@@ -16,7 +16,7 @@
 .backButtonText {
   width: 173px;
   height: 20px;
-  font-family: "Mulish", sans-serif;;
+  font-family: "Mulish", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -31,7 +31,7 @@
 }
 
 .bigText {
-  font-family: "Montserrat Alternates", sans-serif;;
+  font-family: "Montserrat Alternates", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
@@ -55,7 +55,7 @@ margin-bottom: 32px;
 display: block;
 }
 .simpleText {
-  font-family: "Mulish", sans-serif;;
+  font-family: "Mulish", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -67,7 +67,7 @@ display: block;
 }
 
 .dataText {
-  font-family: "Montserrat Alternates", sans-serif;;
+  font-family: "Montserrat Alternates", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
