--- a/Fragments/src/components/UI/registrationDetails/Registration.module.scss
+++ b/Fragments/src/components/UI/registrationDetails/Registration.module.scss
@@ -33,7 +33,7 @@ input[name="email"]{
     box-sizing: border-box;
     width: 100px;
     height: 100px;
-    border: 2px dashed rgba($color: #000000, $alpha: .5);
+    border: 2px rgba($color: #000000, $alpha: .5);
     border-radius: 999px;
     margin: 45px auto;
     -webkit-background-clip: padding-box; /* for Safari */
