Sonar bugs and code smells fixes

--- a/Fragments/src/components/UI/adminPage/AdminSidebar.scss
+++ b/Fragments/src/components/UI/adminPage/AdminSidebar.scss
@@ -35,7 +35,7 @@
     cursor:pointer;
     width: 224px;
     height: 24px;
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
