--- a/Fragments/src/components/UI/notifications/filterDropdown.scss
+++ b/Fragments/src/components/UI/notifications/filterDropdown.scss
@@ -22,7 +22,7 @@
     width: 240px;
     height: 20px;
     margin-bottom: 10px;
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -35,7 +35,7 @@
     width: 240px;
     height: 20px;
     list-style: none;
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
