--- a/Fragments/src/components/UI/notifications/notificationList.scss
+++ b/Fragments/src/components/UI/notifications/notificationList.scss
@@ -23,7 +23,7 @@
 }
 
 .title{
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     line-height: 20px;
     font-weight: 650;
@@ -31,7 +31,7 @@
     margin:12px 0px 0px 56px
 }
 .paragraph{
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -49,7 +49,7 @@
     background: #4F33FD;
 }
 .date{
-    font-family: 'Mulish';
+    font-family: 'Mulish', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
